CPS-2187 - #5 Add module Set Tag to dmi (single cm handle) data request
Issue-ID: CPS-2187
