# docs/api/swagger/openapi.yaml
@@ -209,6 +209,16 @@ paths:
           required: false
           schema:
             type: string
+        - name: moduleSetTag
+          description: Module set tag of the given cm handle.
+          in: query
+          allowReserved: true
+          examples:
+            sample1:
+              value: module-set-tag1
+          required: false
+          schema:
+            type: string
       requestBody:
         content:
           application/json:
@@ -379,6 +389,17 @@ components:
       required: false
       schema:
         type: string
+    moduleSetTagParamInQuery:
+      name: moduleSetTag
+      in: query
+      description: Module set tag of the given cm handle.
+      required: false
+      schema:
+        type: string
+      allowReserved: true
+      examples:
+        sample1:
+          value: module-set-tag1
     requiredTopicParamInQuery:
       allowReserved: true
       description: mandatory topic name passed from client(NCMP).
