# src/main/java/org/onap/cps/ncmp/dmi/rest/controller/DmiRestController.java
@@ -138,7 +138,11 @@ public class DmiRestController implements DmiPluginApi, DmiPluginInternalApi {
                                                         final String resourceIdentifier,
                                                         final String optionsParamInQuery,
                                                         final String topicParamInQuery,
+                                                        final String moduleSetTagParamInQuery,
                                                         final DataAccessRequest dataAccessRequest) {
+        if (moduleSetTagParamInQuery != null) {
+            log.info("Module set tag received and logged: {}", moduleSetTagParamInQuery);
+        }
         if (DatastoreType.PASSTHROUGH_OPERATIONAL == DatastoreType.fromDatastoreName(datastoreName)) {
             return dataAccessPassthroughOperational(resourceIdentifier, cmHandle, dataAccessRequest,
                     optionsParamInQuery, topicParamInQuery);
